index.css
*{
    margin: 0;
    padding: 0;
    font-family: Assistant,-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Helvetica,Arial,sans-serif;
    box-sizing: border-box;
}
header{
    background-color: white;    
    height: 80px;
    display: flex;
    align-items: center;
    justify-content: space-between;
    border-bottom: 0.5px solid #ebebeb;
}
.logo{
    height: 36px;
}
.logo_container{
    margin-left: 4%;
}
.action_bar{
    margin-right: 4%;
}
.nav_bar{
    display: flex;
    min-width: 500px;
    justify-content: space-between;
}
.nav_bar a{
    text-decoration: none;
    font-size: 13px;
    letter-spacing: .3px;
    color: #282c3f;
    font-weight: 700;
    text-transform: uppercase;
    padding: 28px 0;
    margin: 7.5px 15px 7.5px 15px;
    border-bottom: 4px solid white;
}
.red_bar:hover{
    border-bottom: 4px solid #ee5f73;
}
.yellow_bar:hover{
    border-bottom: 4px solid #f2c210;
}
.green_bar:hover{
    border-bottom: 4px solid #0db7af;
}
.nav_bar a sup{
    color: #ff3f6c;
    font-size: 10px;
}
.material-symbols-outlined {
  font-variation-settings:
  'FILL' 0,
  'wght' 400,
  'GRAD' 0,
  'opsz' 20
}
.search_bar{
    display: flex;
    height: 40px;
    min-width: 150px;
    width: 34%;
    align-items: center;
    margin-left: 10px;
}
.search_input{
    border: none;
    color: #696e79;
    height: 40px;
    width: 0%;
    flex-grow: 1;
    background-color: #f5f5f6;
    padding: 8px 10px 10px;
    border-radius: 0 4px 4px 0;
}
.search_icon{
    height: 40px;
    flex-shrink: 0;
    background-color: #f5f5f6;
    color: #282c3f;
    padding: 8px 10px 10px;
    border-radius: 4px 0 0 4px;
}
.action_bar{
    display: flex;
    min-width: 200px;
    justify-content: space-evenly;
}
.action_container a{
    display: flex;
    flex-direction: column;
    align-items: center;
    text-decoration: none;
    color: black;
}
.action_name{
    font-size: 12px;
    font-weight: 700;
    line-height: 6px;
    padding-top: 4px;
}
.action_icon {
  font-variation-settings:
  'FILL' 0,
  'wght' 200,
  'GRAD' 0,
  'opsz' 20
}


/*Main Section*/
.banner_image{
    width: 100%;
    margin: 40px 0;
}
.category_heading{
    text-transform: uppercase;
    color: #3e4152;
    letter-spacing: .15em;
    font-size: 1.8em;
    margin: 50px 0 10px 30px;
    max-height: 5em;
    font-weight: 700;
}
.category_items{
    display: flex;
    flex-wrap: wrap;
}
.category_images{
    width: 243px;
}

/*Footer Section*/
.footer_container{
    background-color: #FAFBFC;
    height: 500px;
    padding: 30px 0;
    display: flex;
    justify-content: space-evenly;
}
.footer_column{
    display: flex;
    flex-direction: column;
}
.footer_column h3{
    font-size: 12px;
    color: #282c3f;
    font-weight: 700;
    margin: 25px 0;
}
.badge_container{
    display: flex;
}
.footer_column a{
    font-size: 15px;
    text-decoration: none;
    color: #696b79;
}
.footer_badge img{
    margin-right: 10px;
}
.socials_icon_container{
    display: flex;
    flex-direction: row;
}
.socials a{
    color: #696e79;
    margin-right: 3px;
}
.footer_container2{
    background-color: #FAFBFC;
}
.copyright{
    color: #94969f;
    margin: 0 160px;
    display: flex;
    justify-content: space-between;
}
.address{
    margin-left: 160px;
}
.address h3{
    font-size: 15px;
    font-family: 700;
    margin-bottom: 25px;
}
.address p{
    font-size: 15px;
    color: #94969f;
}

